--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -48,7 +48,7 @@
     <main
       id="MainContent"
       tabindex="-1"
-      class="pt-5 "
+      style="padding-top: 7rem;"
     >
       {{ content_for_layout }}
     </main>
