--- a/sections/product-detail.liquid
+++ b/sections/product-detail.liquid
@@ -1,3 +1,6 @@
+{% assign is_action_sticky = section.settings.is_action_sticky %}
+{% assign full_size_accordion = section.settings.full_size_accordion %}
+
 {% style %}
   .product-detail--sticky-position {
     top: 72px;
@@ -86,63 +89,65 @@
         class="d-flex d-lg-none justify-content-between align-items-center "
         id="product-detail-sidebar"
       ></div>
-      <div class="accordion" id="product-accordion">
-        <div class="accordion-item">
-          <h2 class="accordion-header">
-            <button
-              class="accordion-button"
-              type="button"
-              data-bs-toggle="collapse"
-              data-bs-target="#product-description-content"
-              aria-expanded="true"
-              aria-controls="product-description-content"
-            >
-              <h4>Description</h4>
-            </button>
-          </h2>
-          <div
-            id="product-description-content"
-            class="accordion-collapse collapse show"
-            data-bs-parent="#product-accordion"
-          >
-            <div class="accordion-body">
-              {{ product.description }}
-            </div>
-          </div>
-        </div>
-        {% comment %}
+      {% unless full_size_accordion %}
+        <div class="accordion" id="product-accordion">
           <div class="accordion-item">
             <h2 class="accordion-header">
               <button
                 class="accordion-button"
                 type="button"
                 data-bs-toggle="collapse"
-                data-bs-target="#product-review-content"
+                data-bs-target="#product-description-content"
                 aria-expanded="true"
-                aria-controls="product-review-content"
+                aria-controls="product-description-content"
               >
-                <h4>Reviews</h4>
+                <h4>Description</h4>
               </button>
             </h2>
             <div
-              id="product-review-content"
+              id="product-description-content"
               class="accordion-collapse collapse show"
               data-bs-parent="#product-accordion"
             >
               <div class="accordion-body">
-                <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse
-                plugin adds the appropriate classes that we use to style each element. These classes control the overall
-                appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom
-                CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the
-                <code>.accordion-body</code>, though the transition does limit overflow.
+                {{ product.description }}
               </div>
             </div>
           </div>
-        {% endcomment %}
-      </div>
+          {% comment %}
+            <div class="accordion-item">
+              <h2 class="accordion-header">
+                <button
+                  class="accordion-button"
+                  type="button"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#product-review-content"
+                  aria-expanded="true"
+                  aria-controls="product-review-content"
+                >
+                  <h4>Reviews</h4>
+                </button>
+              </h2>
+              <div
+                id="product-review-content"
+                class="accordion-collapse collapse show"
+                data-bs-parent="#product-accordion"
+              >
+                <div class="accordion-body">
+                  <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse
+                  plugin adds the appropriate classes that we use to style each element. These classes control the overall
+                  appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom
+                  CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the
+                  <code>.accordion-body</code>, though the transition does limit overflow.
+                </div>
+              </div>
+            </div>
+          {% endcomment %}
+        </div>
+      {% endunless %}
     </div>
     <div class="d-none d-lg-block col col-md-4 pe-0" id="product-detail">
-      <div class="product-detail--sticky-position sticky-top">
+      <div class="{% if is_action_sticky %}product-detail--sticky-position sticky-top{% endif %}">
         <teleport :disabled="isDesktop" to="#product-detail-sidebar">
           <form @submit.prevent="addCartItem(chosenVariant.id, qty)">
             <div class="p-3 w-100  bg-body-tertiary rounded shadow ">
@@ -299,10 +304,80 @@
       </div>
     </div>
   </div>
+  {% if full_size_accordion %}
+    <div class="accordion" id="product-accordion">
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <button
+            class="accordion-button"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#product-description-content"
+            aria-expanded="true"
+            aria-controls="product-description-content"
+          >
+            <h4>Description</h4>
+          </button>
+        </h2>
+        <div
+          id="product-description-content"
+          class="accordion-collapse collapse show"
+          data-bs-parent="#product-accordion"
+        >
+          <div class="accordion-body">
+            {{ product.description }}
+          </div>
+        </div>
+      </div>
+      {% comment %}
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button
+              class="accordion-button"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#product-review-content"
+              aria-expanded="true"
+              aria-controls="product-review-content"
+            >
+              <h4>Reviews</h4>
+            </button>
+          </h2>
+          <div
+            id="product-review-content"
+            class="accordion-collapse collapse show"
+            data-bs-parent="#product-accordion"
+          >
+            <div class="accordion-body">
+              <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse
+              plugin adds the appropriate classes that we use to style each element. These classes control the overall
+              appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom
+              CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the
+              <code>.accordion-body</code>, though the transition does limit overflow.
+            </div>
+          </div>
+        </div>
+      {% endcomment %}
+    </div>
+  {% endif %}
 </section>
 
 {% schema %}
 {
-  "name": "Product Detail"
+  "name": "Product Detail",
+  "settings": [
+    {
+      "type": "checkbox",
+      "label": "Is action sticky?",
+      "id": "is_action_sticky",
+      "default": true
+    },
+    {
+      "type": "checkbox",
+      "label": "Full size accordion?",
+      "id": "full_size_accordion",
+      "default": true
+    }
+  ]
 }
 {% endschema %}
