Fixed custom sections not show up

--- a/sections/hero-banner.liquid
+++ b/sections/hero-banner.liquid
@@ -141,6 +141,12 @@
       "label": "Autoplay Carousel?",
       "default": true
     }
+  ],
+  "presets": [
+    {
+      "name": "Hero Banner",
+      "category": "Banner"
+    }
   ]
 }
 {% endschema %}
