--- a/sections/separator.liquid
+++ b/sections/separator.liquid
@@ -32,6 +32,12 @@
       ],
       "default": "3"
     }
+  ],
+  "presets": [
+    {
+      "name": "Separator",
+      "category": "Miscellaneous"
+    }
   ]
 }
 {% endschema %}
