--- a/sections/container.liquid
+++ b/sections/container.liquid
@@ -111,6 +111,12 @@
       ],
       "default": "left"
     }
+  ],
+  "presets": [
+    {
+      "name": "Container",
+      "category": "Miscellaneous"
+    }
   ]
 }
 {% endschema %}
