--- a/sections/account-login.liquid
+++ b/sections/account-login.liquid
@@ -74,6 +74,8 @@
 {%- endif -%}
 </section>
 
+<script type="module" defer src="{{ 'accountLogin.js' | asset_url }}"></script>
+
 {% schema %}
 {
   "name": "Login Page",
