--- a/sections/account-register.liquid
+++ b/sections/account-register.liquid
@@ -137,6 +137,7 @@
     </div>
   {%- endif -%}
 </section>
+<script type="module" defer src="{{ 'accountRegister.js' | asset_url }}"></script>
 
 {% schema %}
 {
