--- a/sections/product-detail.liquid
+++ b/sections/product-detail.liquid
@@ -297,6 +297,8 @@
   {% endif %}
 </section>
 
+<script type="module" defer src="{{ 'productDetail.js' | asset_url }}"></script>
+
 {% schema %}
 {
   "name": "Product Detail",
