--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -83,6 +83,8 @@
   </div>
 </section>
 
+<script type="module" defer src="{{ 'footer.js' | asset_url }}"></script>
+
 {% schema %}
 {
   "name": "Footer",
