--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -290,6 +290,8 @@
   </div>
 </div>
 
+<script type="module" defer src="{{ 'header.js' | asset_url }}"></script>
+
 {% schema %}
 {
   "name": "Header",
