Tried remove defer

--- a/sections/product-detail.liquid
+++ b/sections/product-detail.liquid
@@ -311,7 +311,7 @@
   {% endif %}
 </section>
 
-<script type="module" defer src="{{ 'productDetail.js' | asset_url }}"></script>
+<script type="module" src="{{ 'productDetail.js' | asset_url }}"></script>
 
 {% schema %}
 {
