Tried added defer

--- a/sections/product-detail.liquid
+++ b/sections/product-detail.liquid
@@ -311,7 +311,7 @@
   {% endif %}
 </section>
 
-<script type="module">
+<script type="module" defer>
   import { createApp, reactive, ref } from 'vue';
 
   import { breakpoint } from 'helper';
