--- a/sections/account-profile.liquid
+++ b/sections/account-profile.liquid
@@ -18,7 +18,7 @@
   {% if customer.orders == empty %}
     <div class="d-flex flex-column align-items-center justify-content-center">
       <h2 class="p-3 d-flex text-capitalize text-center">no order yet</h2>
-      <a class="btn btn-primary" href="/home">Go Shopping</a>
+      <a class="btn btn-primary" href="{{ shop.url }}/home">Go Shopping</a>
     </div>
   {% else %}
     <h1>My Orders</h1>
