--- a/sections/account-login.liquid
+++ b/sections/account-login.liquid
@@ -15,8 +15,8 @@
       </div>
       <div class="col-12 col-md-6 container px-auto p-3 p-md-5">
   {%- endif -%}
-    <h1 class="mb-3 text-center">Login</h1>
-    <div class="container-sm">
+    <h1 class="mb-3 text-center">[[forgetPassword ? 'Forget Password?' :'Login']]</h1>
+    <div v-if="!forgetPassword" class="container-sm">
     {% form 'customer_login' %}
       {%- if form.errors -%}
         <h5 class="text-danger" tabindex="-1" autofocus>{{ form.errors | default_errors }}</h5>
@@ -55,7 +55,7 @@
           placeholder="123456abc"
         >
       </div>
-      <a class="link" href="#recover"> Forget password? </a>
+      <a class="link" href="#" @click="forgetPassword = true" > Forget password? </a>
       <button
         type="submit"
         class="mt-3 btn btn-primary w-100"
@@ -68,6 +68,37 @@
       </p>
     {% endform %}
   </div>
+  <div v-else class="container-sm">
+    {% form 'recover_customer_password' %}
+      {{ form.errors | default_errors }}
+
+      <div class="mb-3">
+        <label for="email" class="form-label">Email address</label>
+        <input
+          type="email"
+          name="email"
+          class="form-control"
+          id="email"
+          spellcheck="false"
+          autocapitalize="off"
+          autocorrect="off"
+          autocomplete="email"
+          aria-required="true"
+          {% if form.errors contains 'email' %}
+            aria-invalid="true"
+          {% endif %}
+          placeholder="xxxxxx@xxx.com"
+        >
+      </div>
+      <a class="link" href="#" @click="forgetPassword = false" > Remember password </a>
+      <button
+        type="submit"
+        class="mt-3 btn btn-primary w-100"
+      >
+        Reset Password
+      </button>
+    {% endform %}
+    </div>
   {%- if background_image -%}
   </div>
 </div>
