Added bottom spacing

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -49,6 +49,7 @@
       id="MainContent"
       tabindex="-1"
       style="padding-top: 7rem;"
+      class="pb-5"
     >
       {{ content_for_layout }}
     </main>
