Removed inline height

--- a/sections/hero-banner.liquid
+++ b/sections/hero-banner.liquid
@@ -40,7 +40,7 @@
       {% endfor %}
     </div>
   {% endif %}
-  <div class="carousel-inner drk" style="height: 700px;">
+  <div class="carousel-inner drk">
     {% if section.blocks == empty %}
       <div class="carousel-item relative active">
         {{ 'lifestyle-2' | placeholder_svg_tag }}
