Set content alignment to block level

--- a/sections/container.liquid
+++ b/sections/container.liquid
@@ -2,7 +2,6 @@
   assign no_gutter = section.settings.no_gutter
   assign shadow = section.settings.shadow
   assign column = ''
-  assign content_alignment = ''
   case section.settings.column_count
     when '1'
       assign column = 'col-12'
@@ -10,14 +9,6 @@
       assign column = 'col-12 col-md-6'
     when '3'
       assign column = 'col-12 col-md-4'
-  endcase
-  case section.settings.content_alignment
-    when 'left'
-      assign content_alignment = 'text-start'
-    when 'center'
-      assign content_alignment = 'text-center'
-    when 'right'
-      assign content_alignment = 'text-end'
   endcase
 %}
 <section class="w-100 {% if no_gutter %}container-fluid px-0{% else %}container{% endif %} {% if shadow %}shadow{% endif %}">
@@ -65,6 +56,17 @@
             {%- when '@app' -%}
               {% render block %}
             {%- when 'content_block' -%}
+              {% liquid
+                assign content_alignment = ''
+                case block.settings.content_alignment
+                  when 'left'
+                    assign content_alignment = 'text-start'
+                  when 'center'
+                    assign content_alignment = 'text-center'
+                  when 'right'
+                    assign content_alignment = 'text-end'
+                endcase
+              %}
               <div class="p-3 {{ content_alignment }}">
                 {{ block.settings.content }}
               </div>
@@ -102,6 +104,26 @@
           "id": "content",
           "label": "Content",
           "default": "<p>Write your content here</p>"
+        },
+        {
+          "type": "radio",
+          "id": "content_align",
+          "label": "Content alignment",
+          "options": [
+            {
+              "value": "left",
+              "label": "Left"
+            },
+            {
+              "value": "right",
+              "label": "Right"
+            },
+            {
+              "value": "centered",
+              "label": "Centered"
+            }
+          ],
+          "default": "left"
         },
         {
           "type": "checkbox",
@@ -161,26 +183,6 @@
         }
       ],
       "default": "1"
-    },
-    {
-      "type": "radio",
-      "id": "content_align",
-      "label": "Content alignment",
-      "options": [
-        {
-          "value": "left",
-          "label": "Left"
-        },
-        {
-          "value": "right",
-          "label": "Right"
-        },
-        {
-          "value": "centered",
-          "label": "Centered"
-        }
-      ],
-      "default": "left"
     }
   ],
   "presets": [
