--- a/sections/container.liquid
+++ b/sections/container.liquid
@@ -58,7 +58,7 @@
             {%- when 'content_block' -%}
               {% liquid
                 assign content_alignment = ''
-                case block.settings.content_alignment
+                case block.settings.content_align
                   when 'left'
                     assign content_alignment = 'text-start'
                   when 'center'
